some small edits